[package]
name = "marionette"
version = "0.1.0"
authors = ["Werner Kroneman <w.kroneman@ucr.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = "1.0.5"
rand = "0.8.4"
acap = "0.2.0"
num-traits = "0.2.14"
typed-arena = "2.0.1"
itertools = "0.10.1"
petgraph = "0.6.0"
urdf-rs = "0.6.1"
nonempty = "0.7.0"
ordered-float = "2.7.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
nalgebra = { version="0.26.0", features=["proptest-support"] }
ncollide3d = "0.29.0"
ncollide2d = "0.29.0"

[dev-dependencies]
kiss3d = "0.31.0"

[profile.dev]
opt-level = 1